# N-Body-An-Optimization-Journey

./: .gitignore  CMakeLists.txt  README.md  V0_baseline.cpp  V0_baseline.h  V2_StructOfArray.cpp  V3_LoopHoisting.cpp  V3_LoopHoisting.h  V4_Math_Intrinsic.cpp  V4_Math_Intrinsic.h  main.cpp
src/: main.cpp
src/v0/: V0_baseline.cpp
src/v1/: V1_NewtonThirdLaw.cpp  V1_NewtonThirdLaw.h
src/v2/: V2_StructOfArray.cpp  V2_StructOfArray.h
src/v3/: V3_LoopHoisting.cpp
src/v4/: V4_Math_Intrinsic.cpp
src/v5/: V5_SIMD.cpp  V5_SIMD.h
src/v6/: V6_Tiling.cpp  V6_Tiling.h
src/v7/: V7_OpenMP.cpp  V7_OpenMP.h
